--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
     "SERVER_PORT":":8080",
-    "JWT_SIGNING_KEY":"YOUR JWT SIGNING KEY. SHOULD BE RANDOM STRING OF CHARACTERS. DONT SHOW IT ANYONE!",
+    "JWT_SIGNING_KEY":"zdfg^T328jgdfghh4344JyhrbyuT^*%^&512d6y3fdSa",
     "JWT_EXPIRES":86400,
     "PATH_TO_JSON_DB": "./config/db.json"
 }
